chore(filters): added aditional width calc to avoid resizes on small screens

--- a/src/components/Filters/Filters.css
+++ b/src/components/Filters/Filters.css
@@ -75,7 +75,7 @@
   padding: .1rem;
   margin: 1rem 0;
 
-  max-width: calc(100vw - 4rem);
+  max-width: calc(100vw - 5rem);
 
   border: 1px solid #ECEFF1;
   border-radius: 1rem;
